# experiments

./: pyproject.toml
experiments/: auxiliary.py  funcs.py  run_graph.py  run_graph_unsup.py  supervised_2d_beta-const.py  supervised_2d_rho-const.py  unsupervised_2d_beta-const.py
experiments/Data/: disentanglement_2d-1756822766_inputs.json  disentanglement_2d-1756822766_inputs.npz  disentanglement_2d-1756822766_sample0.npz  disentanglement_2d-1756822766_sample1.npz  disentanglement_2d-1756822766_sample2.npz
