[tool.poetry]
name = "experiments"
version = "0.1.0"
description = ""
authors = ["pdmourao <pdmourao@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.3.2"
laboratory = {git = "https://github.com/pdmourao/laboratory.git"}
tqdm = "^4.67.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
